--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>Abax: A Coding Project By Matthew Hill</title>
+    <title>Fizz Buzz: A Coding Project By Matthew Hill</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -51,8 +51,8 @@
        <div class="container col-xxl-8 px-4 py-5">
            <div class="row  row-cols-1 row-cols-md-2 g-5 py-5">
              <div class="col order-last order-md-first">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Abax App: A Coding Project</h1>
-                <h4 class="lead">A Javascript coding exercise using loops. Write a program that displays the numbers from 0 to 100. Display the even numbers in <strong>bold.</strong></h4>
+                <h1 class="display-5 fw-bold lh-1 mb-3">Fizz Buzz: A Coding Project</h1>
+                <h4 class="lead">A Javascript Coding Exercise using loops. Write a program that prints the numbers from 1 to 100 and for multiples of 3 display 'fizz' and multiples of 5 display 'buzz'. If a multiple of both display 'FizzBuzz'.</h4>
                 <ul class="fa-ul pt-2 checklist">
                     <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
                     <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Javascript Fundamentals</li>
