--- a/app.html
+++ b/app.html
@@ -20,7 +20,7 @@
 <!--NAV SECTION-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/mhPC.svg" class="d-inline-block align-text-top" width="30" height="24"><img>Fizz Buzz</a>
+        <a class="navbar-brand" href="#"><img src="/img/FizzBuzzNav.png " class="d-inline-block align-text-top nav-logo" width="30" height="24"><img>  Fizz Buzz</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,41 @@
 </nav>
 <!--MAIN SECTION-->
 <main class="flex-shrink-0">
-    <div class="container"></div>
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md-2">
+            <div class="col col-md-4 border-end border-2">
+                <h1>Fizz Buzz: A Coding Project</h1>
+                <h4 class="lead">
+                    A Javascript coding exercise using loops. Write a program that displays the numbers from 0 to 100 and for multiples of 3, display the word 'fizz'. For multiples of 5 display the word 'buzz' and for multiples of both, display the word 'fizz buzz'.
+                </h4>
+                <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+                <p>Enter a fizz value and a buzz value. Press the button and the values will appear.</p>
+            </div>
+            <div class="col col-md-8">
+                <div>
+                    <h5>Enter Values</h5>
+                    <form class="row gy-2 gx-3" action="">
+                        <div class="col">
+                            <input id="fizzValue" type="number" class="form-control" placeholder="Fizz Value" value="3" aria-label="Fizz Value">
+                        </div>
+                        <div class="col">
+                            <input id="buzzValue" type="number" class="form-control" placeholder="Buzz Value" value="5" aria-label="Buzz Value">
+                        </div>
+                        <div class="col-12">
+                            <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">Buzz It</button>
+                        </div>
+                    </form>
+                    <h2 class="mt-5 border-bottom border-2">Results</h2>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-sm">
+                            <tbody id="results">
+                                <!--Results Go Here-->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
 </main>
 <!--footer-->
 <footer class="footer mt-auto py-3 sticky-footer">
@@ -75,10 +109,23 @@
        </div>
     </div>
 </footer>
-  <!-- Bootstrap JS -->
+<template id="fbTemplate">
+    <tr>
+        <td></td> <!--index 0-->
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</template>  
+
+<!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
 </script>
 <script src="/js/site.js"></script>
+<script>
+    document.getElementById("btnsubmit").addEventListener("click", getValues);
+</script>
 </body>
 </html>
