--- a/code.html
+++ b/code.html
@@ -21,7 +21,7 @@
 <!--NAV SECTION-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/mhPC.svg" class="d-inline-block align-text-top" width="30" height="24"><img>Fizz Buzz</a>
+        <a class="navbar-brand" href="#"><img src="/img/FizzBuzzNav.png" class="d-inline-block align-text-top nav-logo" width="30" height="24"><img>  Fizz Buzz</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
