--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/site.css">
-    <link rel="icon" type="image/png"  href="/img/mhYellowFavicon.svg">
+    <link rel="icon" type="image/png"  href="/img/Fizz Buzz.svg">
     
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 </head>
@@ -20,7 +20,7 @@
 <!--NAV SECTION-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/mhPC.svg" class="d-inline-block align-text-top" width="30" height="24"><img> Abax 100</a>
+        <a class="navbar-brand" href="#"><img src="/img/FizzBuzzNav.png" class="d-inline-block align-text-top nav-logo"  width="30" height="24"><img>  Fizz Buzz</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
                 </h5>
              </div>
              <div class="col">
-                <img src="/img/Abax (1).svg" class="img-fluid center-block d-block mx-auto" alt="Abax Logo" width="700" height="500">
+                <img src="/img/Fizz Buzz.svg" class="img-fluid center-block d-block mx-auto" alt="FizzBuzz Logo" width="700" height="500">
              </div>
            </div>
        </div>
@@ -90,7 +90,7 @@
                 <div><span class="text-mute">&copy;2023</span> Matthew Hill | matthewhill93@outlook.com</div>
             </div>
             <div class="col d-flex align-items-center justify-content-start justify-content-md-center">
-                <img src="/img/mhBgTrans.svg" alt="Matthew Hill Logo" height="24"> <!--Insert Logo once it has been created-->
+                <img src="/img/mhBgTrans.svg" alt="Matthew Hill Logo" height="24"> 
             </div>
             <div class="col d-flex align-items-center justify-content-start justify-content-md-end">
                 <div class="row">
