--- a/app.html
+++ b/app.html
@@ -125,7 +125,7 @@
 </script>
 <script src="/js/site.js"></script>
 <script>
-    document.getElementById("btnsubmit").addEventListener("click", getValues);
+    document.getElementById("btnSubmit").addEventListener("click", getValues);
 </script>
 </body>
 </html>
