code page updated
Code page updated to include annotations

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="#">About</a>
+                    <a class="nav-link" target="_blank" href="https://matthew-hill-portfolio.netlify.app">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https://github.com/Ma77hewHill/JSsiteTemp">Git Repo</a>
@@ -90,7 +90,7 @@
                 <div><span class="text-mute">&copy;2023</span> Matthew Hill | matthewhill93@outlook.com</div>
             </div>
             <div class="col d-flex align-items-center justify-content-start justify-content-md-center">
-                <img src="/img/mhBgTrans.svg" alt="Matthew Hill Logo" height="24"> 
+                <img src="/img/mhBgTrans.svg" alt="Matthew Hill Logo" height="18"> <!--Insert Logo once it has been created-->
             </div>
             <div class="col d-flex align-items-center justify-content-start justify-content-md-end">
                 <div class="row">
