--- a/app.html
+++ b/app.html
@@ -85,7 +85,7 @@
         </div>
 </main>
 <!--footer-->
-<footer class="footer mt-auto py-3 sticky-footer">
+<footer class="footer mt-auto py-2 bg-dark">
     <div class="container-fluid">
        <div class="row row-cols-1 row-cols-md-3 gy-2">
         <div class="col order-last order-md-first text-light">
