--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
        </div>
     </main>
 <!--Footer-->    
-    <footer class="footer mt-auto py-3 sticky-footer">
+    <footer class="footer mt-auto py-2">
         <div class="container-fluid">
            <div class="row row-cols-1 row-cols-md-3 gy-2">
             <div class="col order-last order-md-first text-light">
